<resources>
    <string name="app_name">云机械</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_footer_hint_finish">数据加载完成</string>
    <string name="empty_message1">暂时没有数据哦！</string>
    <string name="loading_message1">正在加载，请稍后！</string>
    <string name="error_message1">网络错误，请重新加载！</string>
    <string name="empty_button1">重试</string>
    <string name="loading_button1">取消</string>
    <string name="error_button1">重试</string>
    <string name="app_error">应用程序错误</string>
    <string name="app_error_message">很抱歉，应用程序出现错误，即将退出。\n请选择邮件的方式将此错误报告提交给我，我会尽快修复这个问题，谢谢！</string>
    <string name="submit_report">提交报告</string>
    <string name="sns_content">云机械平台是一个远程数据采集监测系统,可有效帮您管理系统的压力,温度,振动数据,液位等工作参数,您的朋友邀请您加入,APP下载地址是http://www.cloudm.com/</string>
    <string name="share_to_weixin">分享到微信</string>
    <string name="share_to_weibo">分享到新浪微博</string>
    <string name="share_to_duanxin">短信分享</string>
    <string name="no_network">网络连接失败,请检查您的网络设置</string>
    <string name="no_test">请点击一键检测！</string>
    <string name="no_permission">数据为空或权限不够！</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="simulation_no_change_message">模拟机器，无法执行该操作！</string>
    <string name="no_filt_message">该机器未安装云机械套件，请安装后重试！</string>
    <string name="search_member_hint_message">请输入手机号码</string>
    <string name="search_member_error_message">手机号码错误或不存在!</string>
    <string name="info_card_message">高级权限认证</string>
    <string name="get_version_error">版本更新失败，请稍后重试！</string>
    <string name="version_downloading">已经进入后台更新，您可继续使用</string>
    <string name="no_cloudm_scan_text">无效传感器编号，请重新扫描！</string>
    <string name="no_need_scan_text">该类传感器已装满，请安装其他类型！</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string>
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_repair">报修</string>
    <string name="repair_now">马上报修</string>
    <string name="completed">已完成</string>
    <string name="back">返回</string>
    <string name="detail">详细</string>
    <string name="new_repair">新增报修</string>
    <string name="basicinfo">基本信息</string>
    <string name="title_experience_machine">体验机</string>
    <string name="detect_report">检测报告</string>
    <string name="get_newdata">一键检测, 实时获取设备的最新数据</string>
    <string name="repair_record">维修记录</string>
    <string name="history_repair_record">历史维修记录, 让你一目了然</string>
    <string name="conference">成员组成</string>
    <string name="share_conference">管理成员组成, 共享设备数据</string>
    <string name="detect_now">一键检测</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="my_message">我的消息</string>
    <string name="my_ask">我的提问</string>
    <string name="repair_history">维修记录</string>
    <string name="card_coupon">卡券</string>
    <string name="qr_code">二维码</string>
    <string name="about_and_help">关于帮助</string>
    <string name="share_app">分享APP</string>
    <string name="exit_login">退出登录</string>
    <string name="nickname">昵称</string>
    <string name="remark_name">备注名</string>
    <string name="role">角色</string>
    <string name="manager">管理者</string>
    <string name="query_by_time">按时间查询</string>
    <string name="message">消息</string>
    <string name="refuse">拒绝</string>
    <string name="accepet">接受</string>
    <string name="all">全部</string>
    <string name="ques_ask">问答</string>
    <string name="basic_information">基本信息</string>
    <string name="cloud_box">云盒子</string>
    <string name="repair">报修</string>
    <string name="trurn_over">移交</string>
    <string name="phone_number">手机号码</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="use_help">使用帮助</string>
    <string name="feedback">意见反馈</string>
    <string name="modify_password">修改密码</string>
    <string name="my_qrcode">我的二维码</string>
    <string name="comment">评价</string>
    <string name="elec_fence">电子围栏</string>
    <string name="share">分享</string>
    <string name="my_order">我的订单</string>
    <string name="weibo_oauth_regiseter">应用授权</string>
    <string name="website">http://www.mob.com</string>
    <string name="weibo_upload_content">分享图片</string>
    <string name="wechat_client_inavailable">目前您的微信版本过低或未安装微信，需要安装微信才能使用</string>
    <string name="google_plus_client_inavailable">Google+ 版本过低或者没有安装，需要升级或安装Google+才能使用！</string>
    <string name="qq_client_inavailable">QQ 版本过低或者没有安装，需要升级或安装QQ才能使用！</string>
    <string name="qq_eim_client_inavailable">企业QQ 版本过低或者没有安装，需要升级或安装企业QQ才能使用！</string>
    <string name="pinterest_client_inavailable">Pinterest版本过低或者没有安装，需要升级或安装Pinterest才能使用！</string>
    <string name="instagram_client_inavailable">Instagram版本过低或者没有安装，需要升级或安装Instagram才能使用！</string>
    <string name="yixin_client_inavailable">目前您的易信版本过低或未安装，需要安装易信才能使用</string>
    <string name="line_client_inavailable">目前您的Line版本过低或未安装，需要安装Line才能使用</string>
    <string name="kakaotalk_client_inavailable">目前您的KakaoTalk版本过低或未安装，需要安装KakaoTalk才能使用</string>
    <string name="kakaostory_client_inavailable">目前您的KakaoStory版本过低或未安装，需要安装KakaoStory才能使用</string>
    <string name="sinaweibo">新浪微博</string>
    <string name="tencentweibo">腾讯微博</string>
    <string name="qzone">企业QQ</string>
    <string name="wechat">微信好友</string>
    <string name="wechatmoments">朋友圈</string>
    <string name="wechatfavorite">微信收藏</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="renren">人人网</string>
    <string name="kaixin">开心网</string>
    <string name="email">邮件</string>
    <string name="shortmessage">信息</string>
    <string name="sohumicroblog">搜狐微博</string>
    <string name="sohusuishenkan">搜狐随身看</string>
    <string name="neteasemicroblog">网易微博</string>
    <string name="douban">豆瓣</string>
    <string name="youdao">有道云笔记</string>
    <string name="evernote">印象笔记</string>
    <string name="linkedin">领英</string>
    <string name="googleplus">Google+</string>
    <string name="foursquare">FourSquare</string>
    <string name="qq">QQ</string>
    <string name="pinterest">Pinterest</string>
    <string name="flickr">Flickr</string>
    <string name="tumblr">Tumblr</string>
    <string name="dropbox">Dropbox</string>
    <string name="vkontakte">VK</string>
    <string name="instagram">Instagram</string>
    <string name="yixin">易信</string>
    <string name="yixinmoments">易信朋友圈</string>
    <string name="mingdao">明道</string>
    <string name="kakaotalk">KakaoTalk</string>
    <string name="kakaostory">KakaoStory</string>
    <string name="line">Line</string>
    <string name="bluetooth">蓝牙</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="pocket">Pocket</string>
    <string name="share_to_qzone">分享到企业QQ</string>
    <string name="share_to_qq">分享到QQ</string>
    <string name="mingdao_share_content">网页分享</string>
    <string name="share_to_mingdao">分享到明道</string>
    <string name="share_to_qzone_default">来自%s的分享</string>
    <string name="use_login_button">请改用“登录”按钮</string>
    <string name="cancel">取消</string>
    <string name="sharing">分享操作正在后台进行…</string>
    <string name="share_to">分享到</string>
    <string name="multi_share">图文分享</string>
    <string name="share_completed">分享成功</string>
    <string name="share_canceled">分享已取消</string>
    <string name="select_one_plat_at_least">请选择一个目标平台</string>
    <string name="list_friends">%s的朋友</string>
    <string name="share_failed">分享失败</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">松开刷新</string>
    <string name="refreshing">刷新中…</string>
    <string name="shake2share">摇晃手机！</string>
    <string name="common_determine">确定</string>
    <string name="common_cancel">取消</string>
    <string name="common_back">返回</string>
    <string name="loading_text">Copyright© 2014 Cloudm.com All Rights Reserved</string>
    <string name="guide_button_text">马上进入</string>
    <string name="about_title_text">关于与帮助</string>
    <string name="about_button_text">版本更新</string>
    <string name="main_list_no_location">位置获取中</string>
    <string name="main_bar_text1">机器</string>
    <string name="main_bar_text2">消息</string>
    <string name="main_bar_text3">报修</string>
    <string name="main_bar_text4">我</string>
    <string name="main1_search">搜索</string>
    <string name="main1_guide1">新手引导</string>
    <string name="main1_guide2">我要云盒子</string>
    <string name="main1_list_title">我的机器</string>
    <string name="main1_empty_text1">暂无机器</string>
    <string name="main1_empty_text2">安装云盒子，获取设备数据</string>
    <string name="main2_empty_text">暂无消息</string>
    <string name="main3_empty_text">暂无维修记录</string>
    <string name="main3_empty_button">马上报修</string>
    <string name="main3_title_text">维修记录</string>
    <string name="mc_member_empty_text">暂无成员组成</string>
    <string name="mc_member_add">添加</string>
    <string name="mc_member_title">成员组成</string>
    <string name="mc_no_data_button">知道了</string>
    <string name="work_status_name">(工作中...)</string>
    <string name="mc_basic_information">基本信息</string>
    <string name="mc_members">成员组成</string>
    <string name="mc_electronic_fence">电子围栏</string>
    <string name="mc_historical_track">历史轨迹</string>
    <string name="mc_repair_services">维修服务</string>
    <string name="mc_novice_guide">新手引导</string>
    <string name="mc_novice_guide_button_text">试玩体验机</string>
    <string name="mc_detecting_oval_button_text">完成</string>
    <string name="mc_fault_time">检测时间：</string>
    <string name="mc_collect_time">数据采集时间：</string>
    <string name="mc_no_data1">你还没有生成检测报告，点击</string>
    <string name="mc_no_data2">一键检测即可获取</string>
    <string name="login_title_right">注册</string>
    <string name="login_title">登录</string>
    <string name="register_agreement1">注册即视为同意</string>
    <string name="register_agreement2">云机械平台服务协议</string>
    <string name="device_image_title">机器照片</string>
    <string name="device_change_owner">移交机主</string>
    <string name="historical_track_wheelview_time_start">选择开始时间</string>
    <string name="historical_track_wheelview_time_end">选择结束时间</string>
    <string name="fault_info_t_1">故障预警</string>
    <string name="fault_info_t_2">单位：</string>
    <string name="agent_info_t_1">维修记录</string>
    <string name="unit_1">元</string>
    <string name="device_basics_nameplate_title">铭牌照片</string>
    <string name="device_basics_engine_title">发动机照片</string>
    <string name="device_basics_d_title">机器照片</string>
    <string name="score_text1">积分</string>
    <string name="score_text2">签到成功！积分可以兑换礼品哦</string>
    <string name="score_text3">知道了</string>
    <string name="work_pic">工作照片</string>
    <string name="flush">刷新</string>
    <string name="select_date">日期选择</string>
    <string name="click_select_date_to_view_pic">点击选择具体日期查看设备工作照片</string>
    <string name="device_no_work_no_pic_on_this_day">该日设备未工作，暂无照片</string>
    <string name="purse">钱包</string>
    <string name="aplipay_acount">支付宝账户</string>
    <string name="wx_acount">微信账号</string>
    <string name="extraction_cash">提现</string>
    <string name="do_bind">去绑定</string>
</resources>