<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/public_bg"
    android:orientation="vertical"
    tools:context="com.cloudmachine.ui.home.activity.WorkPicListActivity">

    <com.cloudmachine.widget.CommonTitleView
        android:id="@+id/pic_ctv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:common_right_text="@string/flush"
        app:common_title_name="@string/work_pic" />

    <FrameLayout
        android:id="@+id/pic_date_sel_flt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_size_50"
        android:layout_below="@+id/pic_ctv"
        android:layout_marginTop="@dimen/spa7"
        android:background="@color/white"
        android:paddingLeft="@dimen/dimen_size_20"
        android:paddingRight="@dimen/dimen_size_19">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/select_date"
            android:textSize="@dimen/text_size_14_sp" />

        <TextView
            android:id="@+id/date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:text="@string/click_select_date_to_view_pic"
            android:textColor="@color/cor10"
            android:textSize="@dimen/text_size_14_sp" />

    </FrameLayout>


    <com.jcodecraeer.xrecyclerview.XRecyclerView
        android:id="@+id/pic_list_xrlv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pic_date_sel_flt"
        android:layout_marginTop="@dimen/dimen_size_10"
        android:overScrollMode="never"
        android:paddingLeft="@dimen/dimen_size_10"
        android:paddingRight="@dimen/dimen_size_10"
        />

    <TextView
        android:id="@+id/pic_empty_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_no_work_no_pic_on_this_day"
        android:drawableTop="@drawable/icon_pic_empty"
        android:drawablePadding="@dimen/dimen_size_24"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/dimen_size_90"
        android:layout_below="@+id/pic_date_sel_flt"
        android:visibility="gone"
        />

    <LinearLayout
        android:id="@+id/pic_date_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="vertical"
        android:visibility="gone"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_size_44">

            <TextView
                android:id="@+id/wheelview_cancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/common_left_gap"
                android:text="@string/common_cancel" />

            <TextView
                android:id="@+id/wheelview_determine"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:paddingRight="@dimen/common_left_gap"
                android:text="@string/common_determine" />

            <TextView
                android:id="@+id/wheelview_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/historical_track_wheelview_time_start" />

        </RelativeLayout>

        <com.cloudmachine.utils.widgets.wheelview.WheelView
            android:id="@+id/pic_llst_wlv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />



    </LinearLayout>


</RelativeLayout>
