<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/public_bg"
    android:orientation="vertical"
    tools:context="com.cloudmachine.ui.home.activity.PurseActivity">

    <LinearLayout
        android:id="@+id/purse_layout1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_size_200"
        android:background="@color/cor1"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_title_height">

            <ImageView
                android:id="@+id/purse_back_img"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:paddingLeft="@dimen/pad4"
                android:paddingRight="@dimen/pad4"
                android:src="@drawable/ic_back_normal_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/purse"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_18_sp" />


            <ImageView
                android:id="@+id/purse_instruction_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:paddingBottom="@dimen/dimen_size_2"
                android:paddingLeft="@dimen/dimen_size_5"
                android:paddingRight="@dimen/pad1"
                android:paddingTop="@dimen/dimen_size_2"
                android:src="@drawable/icon_que_sel" />
            <!--<TextView-->
            <!--android:id="@+id/purse_detail_tv"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="right|center_vertical"-->
            <!--android:paddingRight="10dp"-->
            <!--android:text="@string/detail_mx"-->
            <!--android:textColor="@color/white" />-->

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_size_22"
            android:layout_marginTop="@dimen/dimen_size_16"
            android:text="我的余额  (元)"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_14_sp" />

        <TextView
            android:id="@+id/purse_balance_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_size_16"
            android:layout_marginTop="@dimen/dimen_size_30"
            android:text="0"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_67_sp" />
    </LinearLayout>

    <!--android:paddingLeft=""-->
    <!--android:paddingRight=""-->
    <FrameLayout
        android:id="@+id/purse_aplay_fl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_size_50"
        android:layout_below="@+id/purse_layout1"
        android:background="@color/white"
        android:paddingLeft="@dimen/dimen_size_16"
        android:paddingRight="@dimen/dimen_size_16">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:drawableLeft="@drawable/icon_aplipay_smal"
            android:drawablePadding="@dimen/dimen_size_16"
            android:text="@string/aplipay_acount"
            android:textColor="@color/color_66"
            android:textSize="@dimen/text_size_14_sp" />

        <TextView
            android:id="@+id/purse_aliplay_bind_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:drawablePadding="@dimen/pad1"
            android:drawableRight="@drawable/arrow_right"
            android:text="@string/do_bind"
            android:textColor="@color/c_8"
            android:textSize="@dimen/text_size_14_sp" />

    </FrameLayout>

    <View
        android:id="@+id/purse_line"
        style="@style/CommonLandscapeLine"
        android:layout_below="@+id/purse_aplay_fl" />

    <FrameLayout
        android:id="@+id/purse_wx_fl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_size_50"
        android:layout_below="@+id/purse_line"
        android:background="@color/white"
        android:paddingLeft="@dimen/dimen_size_16"
        android:paddingRight="@dimen/dimen_size_16">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:drawableLeft="@drawable/icon_wechat_smal"
            android:drawablePadding="@dimen/dimen_size_16"
            android:text="@string/wx_acount"
            android:textColor="@color/color_66"
            android:textSize="@dimen/text_size_14_sp" />

        <TextView
            android:id="@+id/purse_wx_bind_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:drawablePadding="@dimen/pad1"
            android:drawableRight="@drawable/arrow_right"
            android:text="@string/do_bind"
            android:textColor="@color/c_8"
            android:textSize="@dimen/text_size_14_sp" />


    </FrameLayout>

    <FrameLayout
        android:id="@+id/purse_coupon_fl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_size_50"
        android:layout_below="@+id/purse_wx_fl"
        android:layout_marginTop="@dimen/pad1"
        android:background="@color/white"
        android:paddingLeft="@dimen/dimen_size_16"
        android:paddingRight="@dimen/dimen_size_16">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:drawableLeft="@drawable/icon_card_coupon"
            android:drawablePadding="@dimen/dimen_size_16"
            android:text="@string/card_coupon"
            android:textColor="@color/color_66"
            android:textSize="@dimen/text_size_14_sp" />

        <TextView
            android:id="@+id/purse_coupon_num_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:drawablePadding="@dimen/pad1"
            android:drawableRight="@drawable/arrow_right"
            android:text="0张"
            android:textColor="@color/c_8"
            android:textSize="@dimen/text_size_14_sp" />

    </FrameLayout>


    <Button
        android:id="@+id/purse_extraction_cash_btn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/purse_coupon_fl"
        android:layout_marginTop="@dimen/pad1"
        android:background="@color/white"
        android:text="@string/extraction_cash"
        android:textColor="@color/cor2"
        android:textSize="@dimen/text_size_14_sp" />


    <TextView
        android:id="@+id/purse_deposit_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dimen_size_15"
        android:textColor="@color/cor5"
        android:textSize="@dimen/text_size_13_sp"
        android:paddingTop="@dimen/dimen_size_5"
        android:paddingBottom="@dimen/dimen_size_5"
        android:visibility="gone"
        />


</RelativeLayout>
