<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/public_bg"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.cloudmachine.widget.CommonTitleView
            android:id="@+id/remarkinfo_titleview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:common_title_name="备注信息"
            app:common_right_text="保存"
            app:common_right_textcolor="@color/cor10"
            app:common_right_text_enable="false"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/spa6"
            android:text="@string/nickname"
            android:gravity="center_vertical"
            android:textColor="@color/cor10"
            android:paddingLeft="@dimen/pad2"
            android:textSize="@dimen/siz6"
            />

        <EditText
            android:id="@+id/nickname_edt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spa3"
            android:background="@color/white"
            android:editable="false"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/pad2"
            android:text="挖机王子"
            android:textColor="@color/cor8"
            android:textSize="@dimen/siz3"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/spa6"
            android:text="@string/remark_name"
            android:textColor="@color/cor10"
            android:paddingLeft="@dimen/pad2"
            android:textSize="@dimen/siz6"
            android:gravity="center_vertical"
            />


        <com.cloudmachine.utils.widgets.ClearEditTextView
            android:id="@+id/remarkname_edt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spa3"
            android:hint="请输入备注名"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/pad2"
            android:paddingRight="@dimen/pad2"
            android:textColor="@color/cor8"
            android:textSize="@dimen/siz3"
            />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/spa6"
            android:textColor="@color/cor10"
            android:paddingLeft="@dimen/pad2"
            android:textSize="@dimen/siz6"
            android:text="@string/role"
            android:gravity="center_vertical"
            />

        <FrameLayout
            android:id="@+id/role_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spa3"
            android:background="@color/white"
            android:paddingLeft="@dimen/pad2"
            android:paddingRight="@dimen/pad2"
            >

            <TextView
                android:id="@+id/remarkinfo_role_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/siz3"
                android:textColor="@color/cor8"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:src="@drawable/arrow_right" />

        </FrameLayout>


    </LinearLayout>


</FrameLayout>

