<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:cloudm="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/commom_transparent_bg"
              android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00ff00">

        <LinearLayout
            android:id="@+id/score_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/commom_transparent_bg"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/radius_button_white"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/common_left_gap"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/score_icon"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_view_min_gap"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/score_text1"
                        android:textColor="@color/chart_Limit_line"
                        android:textSize="@dimen/info_score_text_size1"
                        />

                    <TextView
                        android:id="@+id/score_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/common_view_min_gap"
                        android:textColor="@color/chart_Limit_line"
                        android:textSize="@dimen/info_score_text_size2"
                        />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_view_min_gap"
                    android:text="@string/score_text2"
                    android:textColor="@color/personFont"
                    android:textSize="@dimen/info_score_text_size1"
                    />

                <com.cloudmachine.utils.widgets.RadiusButtonView
                    android:id="@+id/score_button"
                    android:layout_width="@dimen/info_score_button_width"
                    android:layout_height="@dimen/info_score_button_height"
                    android:layout_marginTop="@dimen/common_view_min_gap"
                    cloudm:rbtn_fillColor_dw="@color/mc_rad_but_dw_1"
                    cloudm:rbtn_fillColor_nm="@color/chart_Limit_line"
                    cloudm:rbtn_roundRadius="15dp"
                    cloudm:rbtn_strokeColor="@color/chart_Limit_line"
                    cloudm:rbtn_text="@string/score_text3"
                    cloudm:rbtn_textColor="@color/white"
                    cloudm:rbtn_textSize="@dimen/info_score_text_size3"
                    >
                </com.cloudmachine.utils.widgets.RadiusButtonView>
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>


</LinearLayout>